<resources>
    <string name="app_name">StanciuAndreeaMirela1087_tema2</string>
    <string name="avand_in_vedere_situatia_alarmanta_a_orasului_focsani_in_ceea_ce_priveste_raspandirea_virusului_covid_19_s_a_adoptat_masura_testarii_in_masa">Avand in vedere situatia alarmanta a orasului Focsani in ceea ce priveste raspandirea virusului COVID-19, s-a adoptat masura testarii in masa</string>
    <string name="la_momentul_curent_pot_fi_analizate">La momentul curent, pot fi analizate:</string>
    <string name="rezultatele_testelor_locuitorilor">Rezultatele testelor locuitorilor</string>
    <string name="centrele_sanitare_disponibile">Centrele sanitare provizorii</string>
    <string name="adauga_centru_sanitar_provizoriu">Adauga centru sanitar provizoriu</string>
    <string name="ministerul_sanatatii">Ministerul sanatatii</string>
    <string name="denumire_centru_sanitar">Denumire centru sanitar</string>
    <string name="capacitate_pacienti">Capacitate pacienti</string>
    <string name="numar_personal_medical">Numar personal medical</string>
    <string name="manager_centru_sanitar">Manager centru sanitar</string>
    <string name="adauga">Adauga</string>
    <string name="descriere_invalida">Denumirea trebuie sa contina cel putin 4 caractere</string>
    <string name="capacitate_invalida">Capacitatea trebuie sa fie mai mare de 20 pacienti</string>
    <string name="personal_invalid">Trebuie sa existe cel putin 10 cadre medicale</string>
    <string name="manager_invalid">Numele managerului trebuie sa contina cel putin 5 caractere</string>
    <string name="nepreluat">nepreluat</string>
    <string name="pers"> Numar personal medical: </string>
    <string name="cap"> Capacitate pacienti: </string>
    <string name="man"> Manager centru sanitar: </string>
    <string name="nume_pacient">Nume pacient</string>
    <string name="nume_medic">Nume medic</string>
    <string name="varsta_pacient">Varsta pacient</string>
    <string name="specializare_medic">Specializare medic</string>
    <string name="rezultat">Rezultat</string>
    <string name="ani_experienta">Ani experienta</string>
    <string name="revenire_la_meniul_principal">Revenire la meniul principal</string>
    <string name="varsta">Varsta:</string>
    <string name="ani">Ani experienta: </string>
    <string name="cap_pac">Capacitate pacienti: </string>
    <string name="nr_pers">Numar personal medical: </string>
    <string name="json">Fisierul Json a fost accesat cu succes!</string>
    <string name="centrele_sanitare_provizorii">Centrele sanitare provizorii</string>
    <string name="manager">Manager:</string>
    <string name="medic">Medic:</string>
    <string name="pacient">Pacient:</string>
</resources>