<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitati.FormActivity"
    android:background="@drawable/gradient_background">
    <ImageView
        android:id="@+id/stanciu_andreea_main_iv_logo_centru"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        android:src="@drawable/centru"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/adauga_centru_sanitar_provizoriu" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stanciu_andreea_til_denumire"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/stanciu_andreea_main_iv_logo_centru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stanciu_andreea_tied_denumire"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/denumire_centru_sanitar"
            android:textColorHint="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stanciu_andreea_til_capacitate"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/stanciu_andreea_til_denumire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stanciu_andreea_tied_capacitate"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/capacitate_pacienti"
            android:textColorHint="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stanciu_andreea_til_personal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/stanciu_andreea_til_capacitate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stanciu_andreea_tied_personal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/numar_personal_medical"
            android:textColorHint="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stanciu_andreea_til_manager"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/stanciu_andreea_til_personal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stanciu_andreea_tied_manager"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/manager_centru_sanitar"
            android:textColorHint="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/stanciu_andreea_btn_adauga"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"

        android:text="@string/adauga"
        android:textColor="#EA2C00"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/custom_form_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>